--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,6 +36,9 @@
 				 </div>
 			<% end %>
 			<div class="row">
+				<div class="converstation row">
+					<%= render 'layouts/usermaincalendar', collection: @events %>
+				</div>
 				<div class="col-md-4">
 					<%= render 'layouts/merchsidebar' %>
 				</div>
