--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
 			<% end %>
 			<div class="row">
 				<div class="converstation row">
-					<%= render 'layouts/usermaincalendar', collection: @events %>
+					<%= render 'layouts/maincalendar', collection: @events %>
 				</div>
 				<div class="col-md-4">
 					<%= render 'layouts/merchsidebar' %>
